# api/controllers/webhook.js
@@ -227,25 +227,16 @@ function webhook(req, res) {
                 "displayText": "Step 1: Head northeast on Madison Ave toward E 43rd St (0.3 mi/2 mins)\nStep 2: Turn right onto E 48th St (0.2 mi/2 mins)\nStep 3: Turn right at the 2nd cross street onto Lexington Ave (266 ft/1 min)\nStep 4: Turn right at the 1st cross street onto E 47th StDestination will be on the left (177 ft/1 min)\n",
                 "source": "apiai-weather-webhook-sample",
                 "speech": "Step 1: Head northeast on Madison Ave toward E 43rd St (0.3 mi/2 mins)\nStep 2: Turn right onto E 48th St (0.2 mi/2 mins)\nStep 3: Turn right at the 2nd cross street onto Lexington Ave (266 ft/1 min)\nStep 4: Turn right at the 1st cross street onto E 47th StDestination will be on the left (177 ft/1 min)\n",
-                "data": {
-                "skype": {
-                    "text": "Pick a color:",
-                    "suggestedActions": {
-                      "actions" : [
-                          {
-                              "type": "imBack",
-                              "title": "Red",
-                              "value": "Green"
-                          },
-                          {
-                              "type": "imBack",
-                              "title": "Green",
-                              "value": "Green"
-                          }
-                      ]
-                    }
-              }
-                }
+                "messages": [
+                        {
+                        "type": 2,
+                        "platform": "skype",
+                        "title": "title",
+                        "replies" : [
+                            "replies",
+                            "replies"
+                        ]}
+                ]
             })
         }
         else {
